<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidTestMVVM</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_input_fields">InputFieldsActivity</string>
    <string name="input_1_1">input 1 1</string>
    <string name="input_1_2">input 1 2</string>
    <string name="input_1_3">input 1 3</string>
    <string name="input_2_1">input 2 1</string>
    <string name="input_2_2">input 2 2</string>
    <string name="input_2_3">input 2 3</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="average_int">Average Int</string>
    <string name="average_double">Average Double</string>
    <string name="sum_double">Sum Double</string>
    <string name="sum_int">Sum Int</string>
    <string name="btn_list_test">List Test</string>
    <string name="btn_input_test">Input Test</string>
    <string name="btn_input_fields">Input Fields</string>
    <string name="btn_process">process</string>

</resources>