<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://www.gueei.com/android-binding/"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="7"
        android:rowCount="3" >

        <EditText
            android:layout_column="0"
            android:layout_row="0"
            android:hint="@string/input_1_1"
            binding:text="inputData.ValueInt1" />

        <EditText
            android:layout_column="1"
            android:layout_row="0"
            android:hint="@string/input_1_2"
            binding:text="inputData.ValueDbl1" />

        <EditText
            android:layout_column="2"
            android:layout_row="0"
            android:hint="@string/input_1_3"
            binding:text="inputData.ValueStr1" />

        <EditText
            android:layout_column="0"
            android:layout_row="1"
            android:hint="@string/input_2_1"
            binding:text="inputData.ValueInt2" />

        <EditText
            android:layout_column="1"
            android:layout_row="1"
            android:hint="@string/input_2_2"
            binding:text="inputData.ValueDbl2" />

        <EditText
            android:layout_column="2"
            android:layout_row="1"
            android:hint="@string/input_2_3"
            binding:text="inputData.ValueStr2" />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/sum_int"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceMedium"
            binding:text="inputData.SumInt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/sum_double"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceMedium"
            binding:text="inputData.SumDbl" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_process"
        binding:onClick="ProcessData" />

</LinearLayout>